# pathfinder

./: .gitignore  CLAUDE.md  PRODUCTION_READINESS_REVIEW.md  SETUP.md  docker-compose.yml  pathfinder-tdd.md  pyproject.toml  pyrightconfig.json
.github/workflows/: extension-tests.yml
backend/app/: main.py
backend/core/: config.py  security.py
backend/database/: __init__.py  session.py
backend/docs/: models.md  mvp.md
backend/models/: __init__.py  application.py  base.py  job.py  profile.py  user.py
backend/schemas/: jobs.py  profile.py  resume.py  resume_layout.py
backend/services/: ats_scorer.py  candidate_profile_agent.py  docx_layout_extractor.py  docx_renderer_v2.py  docx_resume_renderer.py  docx_text_extractor.py  gemini_vision_layout_agent.py  github_profile_fetcher.py  job_analysis_agent.py  keyword_matcher.py  llm_output.py  patch_engine.py  pdf_layout_extractor.py  pdf_renderer_v2.py  pdf_text_extractor.py  portfolio_scraper.py  profile_layout_correlator.py  relevance_ranker.py  resume_generation_agent.py  resume_renderer.py  resume_section_order.py  synthetic_profile_layout.py
backend/templates/: resume.html
backend/tests/: conftest.py
docs/: pathfinder-uiux-requirements.md  qa-report-2026-07-19.md
extension/: .gitignore  README.md  manifest.json  package.json
extension/src/: background.js  content.js
extension/tests/: api.test.mjs  auth.test.mjs  background.test.mjs  detect.test.mjs  detectionController.test.mjs  fixture-replay.test.mjs  idleController.test.mjs  index.test.mjs  jobAnalysisController.test.mjs  loadingController.test.mjs  (+7 more)
(+80 files in other folders)
