[project]
name = "pathfinder-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyjwt>=2.8,<3",
    "python-docx>=1.2,<2",
    "pymupdf>=1.24,<2",
    "fastapi>=0.115,<1",
    "python-multipart>=0.0.12,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "python-dotenv>=1.0,<2",
    "httpx>=0.27,<1",
    "jinja2>=3.1,<4",
    "lxml[html_clean]>=5.3,<6",
    "pypdf>=5.1,<6",
    "reportlab>=4.2,<5",
    "xhtml2pdf>=0.2.16,<0.3",
    "google-genai>=0.7,<1",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
